--- a/style.css
+++ b/style.css
@@ -7,5 +7,21 @@ body {
 
 p {
   text-align: center;
-  color: darkgray;
+  color: rgb(51, 48, 48);
+  background-color: lightgray;
+  margin-top: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+}
+
+h1 {
+  background-color: lightgray;
+}
+
+.carousel {
+  margin-top: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  margin-left: 10px;
 }
