--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   margin-right: 10px;
   margin-bottom: 10px;
   margin-left: 10px;
+  background-color: rgb(220, 233, 245);
 }
 
 p {
@@ -30,4 +31,9 @@ h1 {
   margin-right: 10px;
   margin-bottom: 10px;
   margin-left: 10px;
+}
+
+.dogphotos {
+  padding: 3%;
+  margin: 3%;
 }
